fix logo text wrapping in Logo.scss

--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -6,4 +6,5 @@ h1.logoBrand {
     font-family: $fontFamilyPlayfairDisplay;
     color: $darkGray;
     min-width: fit-content;
+    white-space: nowrap;
 }
